Fix following FindBugs analysis